// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ContentEditor 1. Empty 1`] = `
<div
  className="sc-iwsKbI HHFSv"
>
  <div
    className="sc-htpNat sc-bxivhb jPtSLP"
  >
    <div
      className="sc-ifAKCX jnKNWa"
    >
      <label
        className="sc-EHOje cHKBal"
      >
        Rich text ↓
      </label>
      <button
        className="sc-bZQynM jKPTxe sc-bwzfXH eBdbwy"
        onClick={[Function]}
        title="Add text block"
      >
        txt
      </button>
      <button
        className="sc-bZQynM jKPTxe sc-bwzfXH eBdbwy"
        onClick={[Function]}
        title="Add sibling text blocks"
      >
        txt | txt
      </button>
    </div>
    <div
      className="sc-ifAKCX jnKNWa"
    >
      <label
        className="sc-EHOje cHKBal"
      >
        Charts ↓
      </label>
      <button
        className="sc-bZQynM jKPTxe sc-bwzfXH eBdbwy"
        onClick={[Function]}
        title="Titled pie"
      >
        pie
      </button>
      <button
        className="sc-bZQynM jKPTxe sc-bwzfXH eBdbwy"
        onClick={[Function]}
        title="Add titled pie with description"
      >
        pie | txt
      </button>
      <button
        className="sc-bZQynM jKPTxe sc-bwzfXH eBdbwy"
        onClick={[Function]}
        title="Add description with titled pie"
      >
        txt | pie
      </button>
    </div>
  </div>
  <div
    className="sc-htpNat sc-gZMcBi dhHVRr"
  >
    <div
      style={
        Object {
          "columnGap": 20,
          "display": "grid",
          "gridTemplateAreas": "none",
          "gridTemplateColumns": "repeat(auto-fit, minmax(300px, 1fr))",
          "gridTemplateRows": "",
          "rowGap": 20,
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots ContentEditor 2. Draft 1`] = `
<div
  className="sc-iwsKbI HHFSv"
>
  <div
    className="sc-htpNat sc-bxivhb jPtSLP"
  >
    <div
      className="sc-ifAKCX jnKNWa"
    >
      <label
        className="sc-EHOje cHKBal"
      >
        Rich text ↓
      </label>
      <button
        className="sc-bZQynM jKPTxe sc-bwzfXH eBdbwy"
        onClick={[Function]}
        title="Add text block"
      >
        txt
      </button>
      <button
        className="sc-bZQynM jKPTxe sc-bwzfXH eBdbwy"
        onClick={[Function]}
        title="Add sibling text blocks"
      >
        txt | txt
      </button>
    </div>
    <div
      className="sc-ifAKCX jnKNWa"
    >
      <label
        className="sc-EHOje cHKBal"
      >
        Charts ↓
      </label>
      <button
        className="sc-bZQynM jKPTxe sc-bwzfXH eBdbwy"
        onClick={[Function]}
        title="Titled pie"
      >
        pie
      </button>
      <button
        className="sc-bZQynM jKPTxe sc-bwzfXH eBdbwy"
        onClick={[Function]}
        title="Add titled pie with description"
      >
        pie | txt
      </button>
      <button
        className="sc-bZQynM jKPTxe sc-bwzfXH eBdbwy"
        onClick={[Function]}
        title="Add description with titled pie"
      >
        txt | pie
      </button>
    </div>
  </div>
  <div
    className="sc-htpNat sc-gZMcBi dhHVRr"
  >
    <div
      className="sc-bdVaJa iZcSbx"
      id="draft"
      selected={false}
    >
      <div
        className="DraftEditor-root"
      >
        <div
          className="DraftEditor-editorContainer"
        >
          <div
            aria-describedby="placeholder-1"
            aria-expanded={null}
            className="notranslate public-DraftEditor-content"
            contentEditable={true}
            onBeforeInput={[Function]}
            onBlur={[Function]}
            onCompositionEnd={[Function]}
            onCompositionStart={[Function]}
            onCopy={[Function]}
            onCut={[Function]}
            onDragEnd={[Function]}
            onDragEnter={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseUp={[Function]}
            onPaste={[Function]}
            onSelect={[Function]}
            role="textbox"
            spellCheck={false}
            style={
              Object {
                "WebkitUserSelect": "text",
                "outline": "none",
                "userSelect": "text",
                "whiteSpace": "pre-wrap",
                "wordWrap": "break-word",
              }
            }
            suppressContentEditableWarning={true}
          >
            <div
              data-contents="true"
            >
              <div
                className=""
                data-block={true}
                data-editor="1"
                data-offset-key="1-0-0"
              >
                <div
                  className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                  data-offset-key="1-0-0"
                >
                  <span
                    data-offset-key="1-0-0"
                    style={Object {}}
                  >
                    <span
                      data-text="true"
                    >
                      powered by an immutable model and abstracting over cross-browser differences.
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ContentEditor 3. Pie 1`] = `
<div
  className="sc-iwsKbI HHFSv"
>
  <div
    className="sc-htpNat sc-bxivhb jPtSLP"
  >
    <div
      className="sc-ifAKCX jnKNWa"
    >
      <label
        className="sc-EHOje cHKBal"
      >
        Rich text ↓
      </label>
      <button
        className="sc-bZQynM jKPTxe sc-bwzfXH eBdbwy"
        onClick={[Function]}
        title="Add text block"
      >
        txt
      </button>
      <button
        className="sc-bZQynM jKPTxe sc-bwzfXH eBdbwy"
        onClick={[Function]}
        title="Add sibling text blocks"
      >
        txt | txt
      </button>
    </div>
    <div
      className="sc-ifAKCX jnKNWa"
    >
      <label
        className="sc-EHOje cHKBal"
      >
        Charts ↓
      </label>
      <button
        className="sc-bZQynM jKPTxe sc-bwzfXH eBdbwy"
        onClick={[Function]}
        title="Titled pie"
      >
        pie
      </button>
      <button
        className="sc-bZQynM jKPTxe sc-bwzfXH eBdbwy"
        onClick={[Function]}
        title="Add titled pie with description"
      >
        pie | txt
      </button>
      <button
        className="sc-bZQynM jKPTxe sc-bwzfXH eBdbwy"
        onClick={[Function]}
        title="Add description with titled pie"
      >
        txt | pie
      </button>
    </div>
  </div>
  <div
    className="sc-htpNat sc-gZMcBi dhHVRr"
  >
    <div
      className="sc-htoDjs ixDWlM"
      id="pie"
      selected={false}
    >
      <div
        className="sc-dnqmqq kyLrty"
      />
      <svg
        viewBox="0 0 360 360"
      >
        <g>
          <path
            d="M 262.14565271144266 92.52376470943062 A 120 120 0 0 0180 60 L 180 180 L 262.14565271144266 92.52376470943062"
            fill="#653867"
          />
          <text
            fill="black"
            fontSize={14}
            textAnchor="middle"
            x={238.89992842954845}
            y={31.23576225787977}
          >
            12
            %
          </text>
          <text
            dy={14}
            fill="black"
            fontSize={10.5}
            textAnchor="middle"
            x={238.89992842954845}
            y={31.23576225787977}
          >
            repairs
          </text>
        </g>
        <g>
          <path
            d="M 297.87447008744266 157.51424224971305 A 120 120 0 0 0262.14565271144266 92.52376470943062 L 180 180 L 297.87447008744266 157.51424224971305"
            fill="#e5002d"
          />
          <text
            fill="black"
            fontSize={14}
            textAnchor="middle"
            x={320.2090688070182}
            y={102.91941214372557}
          >
            10
            %
          </text>
          <text
            dy={14}
            fill="black"
            fontSize={10.5}
            textAnchor="middle"
            x={320.2090688070182}
            y={102.91941214372557}
          >
            consulting
          </text>
        </g>
        <g>
          <path
            d="M 294.12678195541844 217.08203932499367 A 120 120 0 0 0297.87447008744266 157.51424224971305 L 180 180 L 294.12678195541844 217.08203932499367"
            fill="#f80048"
          />
          <text
            fill="black"
            fontSize={14}
            textAnchor="middle"
            x={339.6842765485235}
            y={190.04648312469016}
          >
            8
            %
          </text>
          <text
            dy={14}
            fill="black"
            fontSize={10.5}
            textAnchor="middle"
            x={339.6842765485235}
            y={190.04648312469016}
          >
            training
          </text>
        </g>
        <g>
          <path
            d="M 135.82505367783858 68.42682169340986 A 120 120 0 1 0294.12678195541844 217.08203932499364 L 180 180 L 135.82505367783858 68.42682169340986"
            fill="#ff3d69"
          />
          <text
            fill="white"
            fontSize={14}
            textAnchor="middle"
            x={138.9271736442787}
            y={223.73811764528472}
          >
            64
            %
          </text>
          <text
            dy={14}
            fill="white"
            fontSize={10.5}
            textAnchor="middle"
            x={138.9271736442787}
            y={223.73811764528472}
          >
            product sales
          </text>
        </g>
        <g>
          <path
            d="M 179.99999999999997 60 A 120 120 0 0 0135.82505367783858 68.42682169340986 L 180 180 L 179.99999999999997 60"
            fill="#ff6d8c"
          />
          <text
            fill="black"
            fontSize={14}
            textAnchor="middle"
            x={150.01898966628391}
            y={22.834039883409844}
          >
            6
            %
          </text>
          <text
            dy={14}
            fill="black"
            fontSize={10.5}
            textAnchor="middle"
            x={150.01898966628391}
            y={22.834039883409844}
          >
            others
          </text>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots ContentEditor 4. Pie and draft 1`] = `
<div
  className="sc-iwsKbI HHFSv"
>
  <div
    className="sc-htpNat sc-bxivhb jPtSLP"
  >
    <div
      className="sc-ifAKCX jnKNWa"
    >
      <label
        className="sc-EHOje cHKBal"
      >
        Rich text ↓
      </label>
      <button
        className="sc-bZQynM jKPTxe sc-bwzfXH eBdbwy"
        onClick={[Function]}
        title="Add text block"
      >
        txt
      </button>
      <button
        className="sc-bZQynM jKPTxe sc-bwzfXH eBdbwy"
        onClick={[Function]}
        title="Add sibling text blocks"
      >
        txt | txt
      </button>
    </div>
    <div
      className="sc-ifAKCX jnKNWa"
    >
      <label
        className="sc-EHOje cHKBal"
      >
        Charts ↓
      </label>
      <button
        className="sc-bZQynM jKPTxe sc-bwzfXH eBdbwy"
        onClick={[Function]}
        title="Titled pie"
      >
        pie
      </button>
      <button
        className="sc-bZQynM jKPTxe sc-bwzfXH eBdbwy"
        onClick={[Function]}
        title="Add titled pie with description"
      >
        pie | txt
      </button>
      <button
        className="sc-bZQynM jKPTxe sc-bwzfXH eBdbwy"
        onClick={[Function]}
        title="Add description with titled pie"
      >
        txt | pie
      </button>
    </div>
  </div>
  <div
    className="sc-htpNat sc-gZMcBi dhHVRr"
  >
    <div
      style={
        Object {
          "columnGap": 20,
          "display": "grid",
          "gridTemplateAreas": "none",
          "gridTemplateColumns": "repeat(auto-fit, minmax(300px, 1fr))",
          "gridTemplateRows": "",
          "rowGap": 20,
        }
      }
    >
      <div
        className="sc-htoDjs ixDWlM"
        id="pie"
        selected={false}
      >
        <div
          className="sc-dnqmqq kyLrty"
        />
        <svg
          viewBox="0 0 360 360"
        >
          <g>
            <path
              d="M 262.14565271144266 92.52376470943062 A 120 120 0 0 0180 60 L 180 180 L 262.14565271144266 92.52376470943062"
              fill="#653867"
            />
            <text
              fill="black"
              fontSize={14}
              textAnchor="middle"
              x={238.89992842954845}
              y={31.23576225787977}
            >
              12
              %
            </text>
            <text
              dy={14}
              fill="black"
              fontSize={10.5}
              textAnchor="middle"
              x={238.89992842954845}
              y={31.23576225787977}
            >
              repairs
            </text>
          </g>
          <g>
            <path
              d="M 297.87447008744266 157.51424224971305 A 120 120 0 0 0262.14565271144266 92.52376470943062 L 180 180 L 297.87447008744266 157.51424224971305"
              fill="#e5002d"
            />
            <text
              fill="black"
              fontSize={14}
              textAnchor="middle"
              x={320.2090688070182}
              y={102.91941214372557}
            >
              10
              %
            </text>
            <text
              dy={14}
              fill="black"
              fontSize={10.5}
              textAnchor="middle"
              x={320.2090688070182}
              y={102.91941214372557}
            >
              consulting
            </text>
          </g>
          <g>
            <path
              d="M 294.12678195541844 217.08203932499367 A 120 120 0 0 0297.87447008744266 157.51424224971305 L 180 180 L 294.12678195541844 217.08203932499367"
              fill="#f80048"
            />
            <text
              fill="black"
              fontSize={14}
              textAnchor="middle"
              x={339.6842765485235}
              y={190.04648312469016}
            >
              8
              %
            </text>
            <text
              dy={14}
              fill="black"
              fontSize={10.5}
              textAnchor="middle"
              x={339.6842765485235}
              y={190.04648312469016}
            >
              training
            </text>
          </g>
          <g>
            <path
              d="M 135.82505367783858 68.42682169340986 A 120 120 0 1 0294.12678195541844 217.08203932499364 L 180 180 L 135.82505367783858 68.42682169340986"
              fill="#ff3d69"
            />
            <text
              fill="white"
              fontSize={14}
              textAnchor="middle"
              x={138.9271736442787}
              y={223.73811764528472}
            >
              64
              %
            </text>
            <text
              dy={14}
              fill="white"
              fontSize={10.5}
              textAnchor="middle"
              x={138.9271736442787}
              y={223.73811764528472}
            >
              product sales
            </text>
          </g>
          <g>
            <path
              d="M 179.99999999999997 60 A 120 120 0 0 0135.82505367783858 68.42682169340986 L 180 180 L 179.99999999999997 60"
              fill="#ff6d8c"
            />
            <text
              fill="black"
              fontSize={14}
              textAnchor="middle"
              x={150.01898966628391}
              y={22.834039883409844}
            >
              6
              %
            </text>
            <text
              dy={14}
              fill="black"
              fontSize={10.5}
              textAnchor="middle"
              x={150.01898966628391}
              y={22.834039883409844}
            >
              others
            </text>
          </g>
        </svg>
      </div>
      <div
        className="sc-bdVaJa iZcSbx"
        id="draft"
        selected={false}
      >
        <div
          className="DraftEditor-root"
        >
          <div
            className="DraftEditor-editorContainer"
          >
            <div
              aria-describedby="placeholder-1"
              aria-expanded={null}
              className="notranslate public-DraftEditor-content"
              contentEditable={true}
              onBeforeInput={[Function]}
              onBlur={[Function]}
              onCompositionEnd={[Function]}
              onCompositionStart={[Function]}
              onCopy={[Function]}
              onCut={[Function]}
              onDragEnd={[Function]}
              onDragEnter={[Function]}
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseUp={[Function]}
              onPaste={[Function]}
              onSelect={[Function]}
              role="textbox"
              spellCheck={false}
              style={
                Object {
                  "WebkitUserSelect": "text",
                  "outline": "none",
                  "userSelect": "text",
                  "whiteSpace": "pre-wrap",
                  "wordWrap": "break-word",
                }
              }
              suppressContentEditableWarning={true}
            >
              <div
                data-contents="true"
              >
                <div
                  className=""
                  data-block={true}
                  data-editor="1"
                  data-offset-key="1-0-0"
                >
                  <div
                    className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                    data-offset-key="1-0-0"
                  >
                    <span
                      data-offset-key="1-0-0"
                      style={Object {}}
                    >
                      <span
                        data-text="true"
                      >
                        powered by an immutable model and abstracting over cross-browser differences.
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ContentEditor 5. Draft and titled pie 1`] = `
<div
  className="sc-iwsKbI HHFSv"
>
  <div
    className="sc-htpNat sc-bxivhb jPtSLP"
  >
    <div
      className="sc-ifAKCX jnKNWa"
    >
      <label
        className="sc-EHOje cHKBal"
      >
        Rich text ↓
      </label>
      <button
        className="sc-bZQynM jKPTxe sc-bwzfXH eBdbwy"
        onClick={[Function]}
        title="Add text block"
      >
        txt
      </button>
      <button
        className="sc-bZQynM jKPTxe sc-bwzfXH eBdbwy"
        onClick={[Function]}
        title="Add sibling text blocks"
      >
        txt | txt
      </button>
    </div>
    <div
      className="sc-ifAKCX jnKNWa"
    >
      <label
        className="sc-EHOje cHKBal"
      >
        Charts ↓
      </label>
      <button
        className="sc-bZQynM jKPTxe sc-bwzfXH eBdbwy"
        onClick={[Function]}
        title="Titled pie"
      >
        pie
      </button>
      <button
        className="sc-bZQynM jKPTxe sc-bwzfXH eBdbwy"
        onClick={[Function]}
        title="Add titled pie with description"
      >
        pie | txt
      </button>
      <button
        className="sc-bZQynM jKPTxe sc-bwzfXH eBdbwy"
        onClick={[Function]}
        title="Add description with titled pie"
      >
        txt | pie
      </button>
    </div>
  </div>
  <div
    className="sc-htpNat sc-gZMcBi dhHVRr"
  >
    <div
      style={
        Object {
          "columnGap": 20,
          "display": "grid",
          "gridTemplateAreas": "none",
          "gridTemplateColumns": "repeat(auto-fit, minmax(300px, 1fr))",
          "gridTemplateRows": "",
          "rowGap": 20,
        }
      }
    >
      <div
        className="sc-bdVaJa iZcSbx"
        id="draft"
        selected={false}
      >
        <div
          className="DraftEditor-root"
        >
          <div
            className="DraftEditor-editorContainer"
          >
            <div
              aria-describedby="placeholder-1"
              aria-expanded={null}
              className="notranslate public-DraftEditor-content"
              contentEditable={true}
              onBeforeInput={[Function]}
              onBlur={[Function]}
              onCompositionEnd={[Function]}
              onCompositionStart={[Function]}
              onCopy={[Function]}
              onCut={[Function]}
              onDragEnd={[Function]}
              onDragEnter={[Function]}
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseUp={[Function]}
              onPaste={[Function]}
              onSelect={[Function]}
              role="textbox"
              spellCheck={false}
              style={
                Object {
                  "WebkitUserSelect": "text",
                  "outline": "none",
                  "userSelect": "text",
                  "whiteSpace": "pre-wrap",
                  "wordWrap": "break-word",
                }
              }
              suppressContentEditableWarning={true}
            >
              <div
                data-contents="true"
              >
                <div
                  className=""
                  data-block={true}
                  data-editor="1"
                  data-offset-key="1-0-0"
                >
                  <div
                    className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                    data-offset-key="1-0-0"
                  >
                    <span
                      data-offset-key="1-0-0"
                      style={Object {}}
                    >
                      <span
                        data-text="true"
                      >
                        powered by an immutable model and abstracting over cross-browser differences.
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "columnGap": 20,
            "display": "grid",
            "gridTemplateAreas": "none",
            "gridTemplateColumns": "",
            "gridTemplateRows": "",
            "rowGap": 20,
          }
        }
      >
        <div
          className="sc-bdVaJa iZcSbx"
          id="title"
          selected={false}
        >
          <div
            className="DraftEditor-root DraftEditor-alignCenter"
          >
            <div
              className="DraftEditor-editorContainer"
            >
              <div
                aria-describedby="placeholder-1"
                aria-expanded={null}
                className="notranslate public-DraftEditor-content"
                contentEditable={true}
                onBeforeInput={[Function]}
                onBlur={[Function]}
                onCompositionEnd={[Function]}
                onCompositionStart={[Function]}
                onCopy={[Function]}
                onCut={[Function]}
                onDragEnd={[Function]}
                onDragEnter={[Function]}
                onDragLeave={[Function]}
                onDragOver={[Function]}
                onDragStart={[Function]}
                onDrop={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                onMouseUp={[Function]}
                onPaste={[Function]}
                onSelect={[Function]}
                role="textbox"
                spellCheck={false}
                style={
                  Object {
                    "WebkitUserSelect": "text",
                    "outline": "none",
                    "userSelect": "text",
                    "whiteSpace": "pre-wrap",
                    "wordWrap": "break-word",
                  }
                }
                suppressContentEditableWarning={true}
              >
                <div
                  data-contents="true"
                >
                  <h2
                    className=""
                    data-block={true}
                    data-editor="1"
                    data-offset-key="1-0-0"
                  >
                    <div
                      className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                      data-offset-key="1-0-0"
                    >
                      <span
                        data-offset-key="1-0-0"
                        style={Object {}}
                      >
                        <span
                          data-text="true"
                        >
                          V2. London income - Year 8 - 3,400,000
                        </span>
                      </span>
                    </div>
                  </h2>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="sc-htoDjs ixDWlM"
          id="pie"
          selected={false}
        >
          <div
            className="sc-dnqmqq kyLrty"
          />
          <svg
            viewBox="0 0 360 360"
          >
            <g>
              <path
                d="M 262.14565271144266 92.52376470943062 A 120 120 0 0 0180 60 L 180 180 L 262.14565271144266 92.52376470943062"
                fill="#653867"
              />
              <text
                fill="black"
                fontSize={14}
                textAnchor="middle"
                x={238.89992842954845}
                y={31.23576225787977}
              >
                12
                %
              </text>
              <text
                dy={14}
                fill="black"
                fontSize={10.5}
                textAnchor="middle"
                x={238.89992842954845}
                y={31.23576225787977}
              >
                repairs
              </text>
            </g>
            <g>
              <path
                d="M 297.87447008744266 157.51424224971305 A 120 120 0 0 0262.14565271144266 92.52376470943062 L 180 180 L 297.87447008744266 157.51424224971305"
                fill="#e5002d"
              />
              <text
                fill="black"
                fontSize={14}
                textAnchor="middle"
                x={320.2090688070182}
                y={102.91941214372557}
              >
                10
                %
              </text>
              <text
                dy={14}
                fill="black"
                fontSize={10.5}
                textAnchor="middle"
                x={320.2090688070182}
                y={102.91941214372557}
              >
                consulting
              </text>
            </g>
            <g>
              <path
                d="M 294.12678195541844 217.08203932499367 A 120 120 0 0 0297.87447008744266 157.51424224971305 L 180 180 L 294.12678195541844 217.08203932499367"
                fill="#f80048"
              />
              <text
                fill="black"
                fontSize={14}
                textAnchor="middle"
                x={339.6842765485235}
                y={190.04648312469016}
              >
                8
                %
              </text>
              <text
                dy={14}
                fill="black"
                fontSize={10.5}
                textAnchor="middle"
                x={339.6842765485235}
                y={190.04648312469016}
              >
                training
              </text>
            </g>
            <g>
              <path
                d="M 135.82505367783858 68.42682169340986 A 120 120 0 1 0294.12678195541844 217.08203932499364 L 180 180 L 135.82505367783858 68.42682169340986"
                fill="#ff3d69"
              />
              <text
                fill="white"
                fontSize={14}
                textAnchor="middle"
                x={138.9271736442787}
                y={223.73811764528472}
              >
                64
                %
              </text>
              <text
                dy={14}
                fill="white"
                fontSize={10.5}
                textAnchor="middle"
                x={138.9271736442787}
                y={223.73811764528472}
              >
                product sales
              </text>
            </g>
            <g>
              <path
                d="M 179.99999999999997 60 A 120 120 0 0 0135.82505367783858 68.42682169340986 L 180 180 L 179.99999999999997 60"
                fill="#ff6d8c"
              />
              <text
                fill="black"
                fontSize={14}
                textAnchor="middle"
                x={150.01898966628391}
                y={22.834039883409844}
              >
                6
                %
              </text>
              <text
                dy={14}
                fill="black"
                fontSize={10.5}
                textAnchor="middle"
                x={150.01898966628391}
                y={22.834039883409844}
              >
                others
              </text>
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
